@@ -4,12 +4,28 @@
 read.xlsx <- function(file, sheetIndex, sheetName=NULL,
   rowIndex=NULL, startRow=NULL, endRow=NULL, colIndex=NULL,
   as.data.frame=TRUE, header=TRUE, colClasses=NA,
-  keepFormulas=FALSE, encoding="unknown", ...)
+  keepFormulas=FALSE, encoding="unknown", password=NULL, ...)
 {
   if (is.null(sheetName) & missing(sheetIndex))
     stop("Please provide a sheet name OR a sheet index.")
 
-  wb <- loadWorkbook(file)
+  if (!is.null(password)) {
+    if (!file.exists(file)) stop("file does not exist")
+    file <- .jnew("java/io/File", path.expand(file))
+    fileSystem <-new(J("org/apache/poi/poifs/filesystem/NPOIFSFileSystem"),
+                     file)
+    info <- new(J("org/apache/poi/poifs/crypt/EncryptionInfo"),
+                 fileSystem)
+    decryptor <- J(info, "getDecryptor")
+    verification <- J(decryptor, "verifyPassword", password)
+    if (!verification) stop("password does not verify")
+    dataStream <- J(decryptor, "getDataStream", fileSystem)
+    wb <- new(J("org/apache/poi/xssf/usermodel/XSSFWorkbook"),
+              dataStream)
+  } else {      
+    wb <- loadWorkbook(file)
+  }
+  
   sheets <- getSheets(wb)
   sheet  <- if (is.null(sheetName)) {
     sheets[[sheetIndex]]
